--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "deeply-dwarf",
+  "name": "astroship",
   "type": "module",
-  "version": "0.0.1",
+  "version": "2.2.0",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "build:css": "npx tailwindcss -i ./src/app.css -o dist/app.css --watch"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "astro": "^4.14.6",
-    "typescript": "^5.5.4"
+    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/bricolage-grotesque": "^5.0.6",
+    "@fontsource-variable/inter": "^5.0.18",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@iconify-json/bx": "^1.1.10",
+    "@iconify-json/simple-icons": "^1.1.102",
+    "@iconify-json/uil": "^1.1.8",
+    "@tailwindcss/typography": "^0.5.13",
+    "astro": "^4.8.7",
+    "astro-icon": "^1.1.0",
+    "astro-navbar": "^2.3.2",
+    "astro-seo": "^0.8.3",
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.10"
   }
 }
