--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.2",
     "astro-seo": "^0.8.3",
+    "flowbite": "^2.5.1",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.10"
   }
